--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,24 @@
 * {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-	font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+tr {
+  width: 900px;
+  display: inline-table;
+  table-layout: fixed;
+}
+
+table {
+  height: 400px;
+  display: -moz-groupbox;
+}
+tbody {
+  overflow-y: auto;
+  height: 300px;
+  width: 1000px;
+  position: absolute;
 }
